--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "name": "new-folder",
   "version": "1.0.0",
   "description": "",
+  "type":"module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "author": "haseeb",
   "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.3"
+  },
   "devDependencies": {
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2"
   }
+
+
 }
