--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "new-folder",
   "version": "1.0.0",
   "description": "",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
@@ -10,6 +10,8 @@
   "author": "haseeb",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.3"
@@ -18,6 +20,4 @@
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2"
   }
-
-
 }
